# ao

./: .gitignore  .gitmodules  setup.py
benchmarks/: benchmark_hermes.py  benchmark_kleidi_arm_kernel.py  benchmark_linear_8bit_act_1bit_weight.py  benchmark_linear_8bit_act_2bit_weight.py  benchmark_mps_op.py  benchmark_tmac.py
benchmarks/kernels/: CMakeLists.txt  build.sh  matrix_vec_bench.cpp  mps_bench.mm
examples/bitnet_tmac/: activation.npy  modeling_bitnet.py  simple_chat.py  test_bitlinear.py  utils_quant.py
test/: test_hf_chat.py  test_ops.py  test_pydef.py
test/quantization/: test_quant.py
torchao/: __init__.py  ops.py  utils.py
torchao/csrc/cuda/w4a16_awq/: dequantize.cuh  w4a16_awq.cu
torchao/dtypes/: affine_quantized_tensor.py
torchao/experimental/: CMakeLists.txt  Utils.cmake  build_torchao_ops.sh  quant_api.py
torchao/experimental/allocator/: managed_allocator.cpp
torchao/experimental/benchmarks/: .gitignore  Makefile  cpu_memory_bw.cpp
torchao/experimental/kernels/cpu/aarch64/benchmarks/: benchmark_linear.cpp
torchao/experimental/kernels/mps/codegen/: gen_metal_shader_lib.py
torchao/experimental/kernels/mps/src/: metal_shader_lib.h
torchao/experimental/kernels/mps/test/: Makefile  test_lowbit  test_lowbit.mm
torchao/experimental/ops/hermes/: CMakeLists.txt  op_hermes_aten.cpp
torchao/experimental/ops/linear_8bit_act_xbit_weight/examples/: CMakeLists.txt  build_and_run_examples.sh
torchao/experimental/ops/mps/: CMakeLists.txt  build.sh  linear_fp_act_xbit_weight_aten.mm
torchao/experimental/ops/mps/test/: test_lowbit.py
torchao/experimental/ops/tmac/: .gitignore  CMakeLists.txt  Makefile  benchmark.cc  compile.py  compile_mod.py  op_gen.sh  op_tmac-impl.hpp  op_tmac_aten.cpp  test_e2e.py  test_tmac.py
torchao/experimental/ops/tmac/t-mac/: kcfg.ini  kernels.cc  kernels.h
torchao/experimental/ops/tmac/t-mac/preprocessor/: src.S  src.ll
torchao/experimental/ops/tmac/t-mac/qgemm_lut/: src.S  src.ll
torchao/experimental/ops/tmac/t_mac/: model_utils.py  weights.py
torchao/experimental/ops/tmac/t_mac/intrins/: lut_ctor.cc
torchao/experimental/ops/tmac/t_mac/ops/: base.py  gemm.py  qgemm.py
torchao/experimental/ops/tmac/tests/: test_bitlinear.py  test_compile.py  test_tmac.py  test_tmac_pack.py  test_tmac_ref.py
torchao/experimental/ops/tmac/tuned/: kcfg.ini  kernels.cc  kernels.h
torchao/experimental/ops/tmac/tuned/preprocessor/: src.S  src.ll
torchao/experimental/ops/tmac/tuned/qgemm_lut/: src.S  src.ll
torchao/experimental/tests/: test_ao.py  test_embedding_xbit_quantizer.py  test_linear_8bit_act_xbit_weight_quantizer.py  test_linear_tmac.py  test_op_hermes.py  test_op_tmac.py  test_packed_linear_int8_dynamic_activation_intx_weight_layout.py
torchao/quantization/: quant_api.py  quant_primitives.py  utils.py
tutorials/developer_api_guide/: tensor_parallel.py
